syntax = "proto3";

package yandex.cloud.priv.billing.v1alpha1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "yandex/cloud/api/tools/options.proto";
import "yandex/cloud/priv/billing/v1alpha1/service.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/billing/v1alpha1/private;billing";

service PrivateServicesService {
  rpc GetServices (google.protobuf.Empty) returns (ServicePrivateList) {
    option (google.api.http) = { get: "/billing/v1alpha1/private/services" };
  }
  rpc CreateService (Service) returns (Service) {
    option (google.api.http) = { post: "/billing/v1alpha1/private/services" body: "*" };
  }
  rpc GetService (ServiceIDPrivateRequest) returns (Service) {
    option (google.api.http) = { get: "/billing/v1alpha1/private/services/{service_id}" };
  }
  rpc UpdateService (Service) returns (Service) {
    option (google.api.http) = { put: "/billing/v1alpha1/private/services" body: "*" };
    option (yandex.cloud.api.tools.method).lint_skip.http_verb = true;
  }
}

message ServicePrivateList {
  repeated Service result = 1;
}

message ServiceIDPrivateRequest {
  string service_id = 1;
}
