syntax = "proto3";

package yandex.cloud.priv.vdi.v1.rdg;

import "yandex/cloud/priv/sensitive.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/vdi/v1/rdg/desktop.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/vdi/v1/rdg;vdi_rdg";
option java_outer_classname = "PGDS";

service DesktopService {

    rpc Validate (ValidateDesktopRequest) returns (Desktop);
}

message ValidateDesktopRequest {
    string token = 1 [(required) = true, (length) = "<=256", (sensitive) = true, (sensitive_type) = SENSITIVE_REMOVE];
    string client_ip = 11 [(required) = true, (length) = "<=128"];
    string client_name = 12 [(required) = true, (length) = "<=1024"];
}
