package NOrangeData;

import "kernel/mango/proto/common.proto";

message TDocAnnotation {
    required string Source             = 1; // annotation source
    optional string Type               = 2; // annotation type
    repeated string Values             = 3; // annotation values
    optional fixed32 ModTime           = 4; // modification time
}

message TDocListInfo {
    required string Name               = 1; // name of the doclist
    required fixed32 LastTime          = 2; // last time document has been added to doclist
    optional fixed32 FirstCrawlTime    = 3; // first refersh time in the list
}
message TSupervisorInfo {
    optional double ControlValue       = 1;
    optional double ControlThreshold   = 2;
    optional double Quota              = 3;
    optional bool Passed               = 4;
}
message TExportRecord {
    enum TExportStatus {
        ExportCheckNoRecord = 1;
        ExportCheckEmptyLogel = 2;
        ExportCheckBadLanguage = 3;
        ExportCheckBadLogel = 4;
        ExportCheckTooOld = 5;
        ExportCheckLowSegmentRate = 6;
        ExportCheckLowCashToSpend = 7;
        ExportCheckHighCrawlSelection = 8;
        ExportCheckDuplicate = 9;
        ExportCheckDissallowedReexport = 10;
        ExportCheckLowCrawlRank = 11;
        ExportCheckFailedRandomFilter = 12;
        ExportCheckPassed = 13;

        ExportRankCheckFailed = 14;
        ExportRankCheckPassed = 15;

        ContentCheckFailed = 16;
        ContentCheckPassed = 17;

        ReexportCheckFailed = 18;
        ReexportCheckPassedByTimeLimit = 19;
        ReexportCheckPassedByInfoChange = 20;
    }
    required string Stream             = 1;
    optional fixed32 FirstExportTime   = 2; // the first time we exported url to robot, first LastExportTime
    optional fixed32 LastExportTime    = 3; // the last time we exported url to robot
    optional double ControlValue       = 4; // deprecated (use CrawlRankFilterInfo)
    optional double ControlThreshold   = 5; // deprecated (use CrawlRankFilterInfo)
    optional double StreamQuota        = 6; // deprecated (use CrawlRankFilterInfo)
    optional bool Exported             = 7;
    optional fixed64 LogelCrc          = 9;
    optional uint32 UniqueAnchorOwners = 10;
    optional uint32 UniqueAnchorTexts  = 11;
    optional bool WasRemoved           = 12; // true if we exported 404 logel last time
    optional bool Forced               = 13; // true if forced export or reexport
    optional TSupervisorInfo CrawlRankFilterInfo    = 14;
    optional TSupervisorInfo ExportRankFilterInfo   = 15;
    optional TExportStatus Status             = 16 [default = ExportCheckTooOld];
}

message TAttribute {
    required string Name  = 1;
    required string Value = 2;
}

message TAttributes {
    repeated TAttribute Attribute = 1;
}

message TUrlCounters {
    required fixed32 Generation        = 1; // Generation = int(time() / 86400)
    optional uint32 Good               = 2; // number of docs successfuly crawled
    optional uint32 Error              = 3; // number  of docs we failed to crawl e.g. 404
    optional uint32 Spam               = 4; // number of docs identified as spam
    optional uint32 New                = 5;
    optional uint32 Duplicate          = 6;
    optional uint32 Redirect           = 7;
    optional uint32 Total              = 8;
    optional uint32 Exported           = 9;
}

// Data about an URL's owner.
// This information is managed by HostInfo.
message TOwnerData {
    required fixed32 Age               = 1; // When owner was 1st discovered.
    optional TUrlCounters Counters     = 2; // Aggregated counters for this owner.
}

message TUrlSubscription {
    optional string UrlId       = 1;
    optional fixed32 ExpireTime = 2; // moment when subscription expires
}

message TMangoAnnotation {
    repeated NMango.TIndexQuote Quote = 1;
}

// Type used to store different dates related to document
// processing in external sources and Orange.
message TTimeAnnotation {
    optional string  Name               = 1;    // Annotation name, for example it can be 'RequestTime'
                                                // if value comes from some user log
    optional string  Source             = 2;    // Source (system) that provided this time annotation
    optional fixed64 TimeStamp          = 3;    // Timestamp in microseconds
}

message TBarFactors {
    optional uint64 Visits = 1;
    optional float  AvgTime = 2;
    optional uint64 SocnetVisits = 3;
    optional uint64 SocnetShares = 4;
}

message TExportRankParams {
    optional TExportRecord ExportRecord = 1;
    optional uint32 LastExportTime = 2;
    optional uint32 PubTime = 3;
    optional uint32 ErfCrawlRank = 4;
    optional uint32 Language2 = 5;
    repeated float  AuxFactors = 6; // factors from content system
}

// not really made by orange, but half of ukrop exports for fusion are declared here now
message TNewsFactors {
    optional bool FromNews = 1;
    optional bool FromNewsCluster = 2;
    optional uint32 NewsRuTitleQuality = 3;
}
